--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -38,26 +38,13 @@ rulesets:
       - type: non_fast_forward  # Block force-push
       - type: required_linear_history
       - type: required_signatures
-  - name: collaborators
+  - name: signed
     target: branch
     enforcement: active
-    bypass_actors:
-      - actor_type: OrganizationAdmin
-        actor_id: 1
-        bypass_mode: always
-      - actor_type: RepositoryRole
-        actor_id: 5
-        bypass_mode: always
     conditions:
       ref_name:
         include:
           - "~DEFAULT_BRANCH"
         exclude: []
     rules:
-      - type: required_status_checks
-        parameters:
-          strict_required_status_checks_policy: false
-          required_status_checks:
-            # NOTE: The Integration ID for GitHub Actions is `15368`
-            - integration_id: 15368
-              context: test
+      - type: required_signatures
