--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -48,3 +48,19 @@ rulesets:
         exclude: []
     rules:
       - type: required_signatures
+  - name: collaborators
+    target: branch
+    enforcement: active
+    conditions:
+      ref_name:
+        include:
+          - "~DEFAULT_BRANCH"
+        exclude: []
+    rules:
+      - type: required_status_checks
+        parameters:
+          strict_required_status_checks_policy: false
+          required_status_checks:
+            # NOTE: The Integration ID for GitHub Actions is `15368`
+            - integration_id: 15368
+              context: test
