--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -48,9 +48,16 @@ rulesets:
         exclude: []
     rules:
       - type: required_signatures
-  - name: collaborators
+  - name: checks
     target: branch
     enforcement: active
+    bypass_actors:
+      - actor_type: OrganizationAdmin
+        actor_id: 1
+        bypass_mode: always
+      - actor_type: RepositoryRole
+        actor_id: 5
+        bypass_mode: always
     conditions:
       ref_name:
         include:
