chore: stage final repo config

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -34,26 +34,15 @@ rulesets:
           - "~DEFAULT_BRANCH"
         exclude: []
     rules:
-      - type: deletion          # Block branch deletion
-      - type: non_fast_forward  # Block force-push
+      - type: deletion # Block branch deletion
+      - type: non_fast_forward # Block force-push
       - type: required_linear_history
-      - type: required_signatures
-  - name: signed
-    target: branch
-    enforcement: active
-    conditions:
-      ref_name:
-        include:
-          - "~DEFAULT_BRANCH"
-        exclude: []
-    rules:
-      - type: required_signatures
-  - name: checks
+  - name: require-status-checks
     target: branch
     enforcement: active
     bypass_actors:
-      - actor_type: RepositoryRole
-        actor_id: 5
+      - actor_id: 5
+        actor_type: RepositoryRole
         bypass_mode: always
     conditions:
       ref_name:
@@ -67,4 +56,21 @@ rulesets:
           required_status_checks:
             # NOTE: The Integration ID for GitHub Actions is `15368`
             - integration_id: 15368
-              context: test
+              context: lint
+            - integration_id: 15368
+              context: build
+  - name: require-signed-commits
+    target: branch
+    enforcement: active
+    bypass_actors:
+      # NOTE: Jules does not support signed commits
+      - actor_id: 842251
+        actor_type: Integration
+        bypass_mode: always
+    conditions:
+      ref_name:
+        include:
+          - "~DEFAULT_BRANCH"
+        exclude: []
+    rules:
+      - type: required_signatures
