chore: update GitHub repo config
This commit standardises the GitHub repo config across
repositories. Apart from inconsequential changes, it
includes several noteworthy modifications:

- Add `require-signed-commits` ruleset to cater for LLMs
- Modify `collaborators` ruleset to `require-status-checks`
- Enforce squash commit format

Idempotency-Key: 86bd87ff764286c10c8e4b76f930bbaa

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -12,6 +12,8 @@ repository:
   allow_merge_commit: false
   allow_squash_merge: true
   allow_rebase_merge: false
+  squash_merge_commit_title: COMMIT_OR_PR_TITLE
+  squash_merge_commit_message: COMMIT_MESSAGES
 
   # Allow auto-merge workflows (e.g. Dependabot)
   allow_auto_merge: true
