--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -38,6 +38,23 @@ rulesets:
       - type: deletion # Block branch deletion
       - type: non_fast_forward # Block force-push
       - type: required_linear_history
+  # NOTE: Copilot/Jules are not able to push signed commits yet
+  # so we need repository admins to be able bypass this
+  # restriction for PRs.
+  - name: require-signed-commits
+    target: branch
+    enforcement: active
+    bypass_actors:
+      - actor_id: 5
+        actor_type: RepositoryRole
+        bypass_mode: pull_request
+    conditions:
+      ref_name:
+        include:
+          - "~DEFAULT_BRANCH"
+        exclude: []
+    rules:
+      - type: required_signatures
   - name: require-status-checks
     target: branch
     enforcement: active
@@ -58,18 +75,3 @@ rulesets:
             # NOTE: The Integration ID for GitHub Actions is `15368`
             - integration_id: 15368
               context: test
-  - name: require-signed-commits
-    target: branch
-    enforcement: active
-    bypass_actors:
-      # NOTE: Jules does not support signed commits
-      - actor_id: 842251
-        actor_type: Integration
-        bypass_mode: always
-    conditions:
-      ref_name:
-        include:
-          - "~DEFAULT_BRANCH"
-        exclude: []
-    rules:
-      - type: required_signatures
